# nsl

./: .gitignore  CMakeLists.txt  LICENCE  README.md  stdafx.cpp
NetStalkerLibrary/: .gitignore  CMakeLists.txt  NetStalkerLibrary.sln  NetStalkerLibrary.vcxproj  NetStalkerLibrary.vcxproj.filters  dllmain.cpp  stdafx.h
NetStalkerLibrary/include/: nsl.h  nslBitStream.h  nslClient.h  nslReflection.h  nslReflexion.h  nslServer.h
NetStalkerLibrary/src/: BitStreamReader.cpp  BitStreamWriter.cpp  ObjectClassDefinition.cpp  ObjectClassDefinition.h  Socket.cpp  Socket.h  common.h  configuration.h  nsl.cpp  socket.cpp  socket.h
NetStalkerLibrary/src/client/: Client.cpp  ClientImpl.cpp  ClientImpl.h  ClientObject.cpp  Connection.cpp  Connection.h  CustomMessageBuffer.cpp  CustomMessageBuffer.h  HistoryBuffer.cpp  HistoryBuffer.h  NetworkObject.cpp  NetworkObject.h  ObjectManager.cpp  ObjectManager.h  ProtocolParser.cpp  ProtocolParser.h
NetStalkerLibrary/src/compression/: compression.cpp  compression.h  lz4.c  rle.c  rle.h
NetStalkerLibrary/src/lz4/: lz4.c
NetStalkerLibrary/src/server/: Connection.cpp  Connection.h  HistoryBuffer.cpp  HistoryBuffer.h  NetworkObject.cpp  NetworkObject.h  ObjectManager.cpp  ObjectManager.h  Peer.cpp  Peer.h  ProtocolParser.cpp  ProtocolParser.h  Server.cpp  ServerImpl.cpp  ServerImpl.h  ServerObject.cpp  UserPeer.cpp
examples/: CMakeLists.txt
examples/basicConnection/client/: NslTestClient.cpp  NslTestClient.sln  NslTestClient.vcxproj  NslTestClient.vcxproj.filters  stdafx.h
examples/basicConnection/server/: NslTestServer.cpp  NslTestServer.sln  NslTestServer.vcxproj  NslTestServer.vcxproj.filters
include/: nsl.h  nslBitStream.h  nslClient.h  nslReflexion.h  nslServer.h
src/: BitStreamReader.cpp  BitStreamWriter.cpp  BitStreamWriter.h  ObjectClass.cpp  (+7 more)
(+44 files in other folders)
